--- a/public/css/template.css
+++ b/public/css/template.css
@@ -2,3 +2,11 @@
     display: inline !important;
     margin-left: 10% !important;
 }
+
+.error {
+    color: red;
+  }
+
+  .success {
+    color: green;
+  }
